fix: fixed icons not showing

--- a/deriv-style.css
+++ b/deriv-style.css
@@ -1,8 +1,6 @@
 
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@100&display=swap');
-* {
-  font-family: 'Ubuntu' !important;
-}
+
 footer {
   max-width: 1520px;
   width: auto;
@@ -68,7 +66,7 @@ footer {
 
 .footer--menu--col h3 {
   color: #414652;
-  font-weight: 500;
+  font-weight: 700;
   font-size: 16px;
 }
 
@@ -83,6 +81,7 @@ footer {
   font-size: 14px;
   position: relative;
   transition: color 0.5s;
+  font-family: 'Ubuntu';
 }
 
 /* .footer--menu--col a li::after{
